--- a/sections/header-hiring.liquid
+++ b/sections/header-hiring.liquid
@@ -5,9 +5,12 @@
 
   <!-- Botão hambúrguer para mobile -->
   <button class="hamburger_menu" id="hamburgerMenu">
-    <span></span>
-    <span></span>
-    <span></span>
+    <div class="hamburger_icon">
+      {{ 'hamburguer.svg' | inline_asset_content }}
+    </div>
+    <div class="close_icon">
+      {{ 'close.svg' | inline_asset_content }}
+    </div>
   </button>
 
   <div class="header_container_image">
@@ -39,14 +42,7 @@
       <a href="{{ section.settings.button_link }}" class="button">
         <div class="button_content">
           {{ section.settings.button_text }}
-          <svg
-            width="31"
-            height="12"
-            viewBox="0 0 31 12"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M1.36377 4.80469L0.61377 4.80469L0.613769 6.30469L1.36377 6.30469L1.36377 4.80469ZM30.184 6.08502C30.4768 5.79213 30.4768 5.31725 30.184 5.02436L25.411 0.251388C25.1181 -0.0415052 24.6432 -0.0415052 24.3503 0.251388C24.0574 0.544282 24.0574 1.01916 24.3503 1.31205L28.593 5.55469L24.3503 9.79733C24.0574 10.0902 24.0574 10.5651 24.3503 10.858C24.6432 11.1509 25.1181 11.1509 25.411 10.858L30.184 6.08502ZM1.36377 6.30469L29.6536 6.30469L29.6536 4.80469L1.36377 4.80469L1.36377 6.30469Z" fill="black" />
-          </svg>
+          {{ 'arrow-right.svg' | inline_asset_content }}
         </div>
       </a>
     </div>
