--- a/assets/header-hiring.css
+++ b/assets/header-hiring.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: var(--light-gray);
   padding: 2.3rem 1.6rem;
   position: relative;
   z-index: 1000;
@@ -20,7 +20,7 @@
     :is(h1) {
       font-size: 1.6rem;
       font-weight: 400;
-      color: #000;
+      color: var(--black);
       margin: 0;
     }
   }
@@ -29,14 +29,15 @@
   .header_container_button {
     .button {
       padding: 12px 24px;
-      background-color: #fff544;
-      color: #000;
+      background-color: var(--yellow);
+      color: var(--black);
       text-decoration: none;
       text-transform: uppercase;
       transition: color 0.3s ease;
       width: 20.07rem;
       position: relative;
       overflow: hidden;
+      white-space: nowrap;
 
       font-size: 1.6rem;
       font-weight: 400;
@@ -49,7 +50,7 @@
         right: 0;
         width: 0;
         height: 100%;
-        background-color: #000;
+        background-color: var(--black);
         transition: width 0.3s ease;
         z-index: 1;
       }
@@ -66,14 +67,14 @@
 
       /* Hover state */
       &:hover {
-        color: #fff;
+        color: var(--white);
 
         &::before {
           width: 100%;
         }
 
         :is(svg path) {
-          fill: #fff;
+          fill: var(--white);
         }
       }
     }
@@ -141,7 +142,7 @@
     top: 100%;
     left: 0;
     right: 0;
-    background-color: #f5f5f5;
+    background-color: var(--light-gray);
     transform: translateY(-100%);
     opacity: 0;
     visibility: hidden;
@@ -174,14 +175,15 @@
       :is(h1) {
         margin-bottom: 1.6rem;
         font-size: 1.6rem;
-        color: #000;
+        color: var(--black);
+        font-weight: 400;
       }
 
       /* Mobile menu button */
       .button {
         padding: 12px 24px;
-        background-color: #fff544;
-        color: #000;
+        background-color: var(--yellow);
+        color: var(--black);
         text-decoration: none;
         text-transform: uppercase;
         transition: color 0.3s ease;
@@ -200,7 +202,7 @@
           right: 0;
           width: 0;
           height: 100%;
-          background-color: #000;
+          background-color: var(--black);
           transition: width 0.3s ease;
           z-index: 1;
         }
@@ -217,18 +219,23 @@
 
         /* Hover state */
         &:hover {
-          color: #fff;
+          color: var(--white);
 
           &::before {
             width: 100%;
           }
 
           :is(svg path) {
-            fill: #fff;
+            fill: var(--white);
           }
         }
       }
     }
+  }
+
+  .header_container_image {
+    letter-spacing: normal;
+    line-height: normal;
   }
 }
 
