style: add style to main banner on desktop

--- a/sections/main-banner-hiring.liquid
+++ b/sections/main-banner-hiring.liquid
@@ -48,6 +48,10 @@
     "tag": "section",
     "settings": [
       {
+        "type": "header",
+        "content": "Image Content"
+      },
+      {
         "type": "image_picker",
         "id": "image",
         "label": "Image"
@@ -58,23 +62,29 @@
         "label": "Mobile Image"
       },
       {
+        "type": "header",
+        "content": "Content Settings"
+      },
+      {
         "type": "text",
         "id": "title",
-        "label": "Title"
-      },
-      {
+        "label": "Title",
+        "default": "The Gift Guide"
+      }, {
         "type": "text",
         "id": "text",
-        "label": "Text"
-      },
-      {
+        "label": "Text",
+        "default": "Discover Joy: Your Ultimate Holiday Gift Destination. Explore our curated selection and find the perfect gifts to delight your loved ones this holiday season."
+      }, {
         "type": "text",
         "id": "text_mobile",
-        "label": "Text Mobile"
+        "label": "Text Mobile",
+        "default": "Discover Joy: Your Ultimate Holiday Gift Destination."
       }, {
         "type": "text",
         "id": "button_text",
-        "label": "Button Text"
+        "label": "Button Text",
+        "default": "Shop Now"
       }, {
         "type": "url",
         "id": "button_link",
