--- a/sections/thin-banner-hiring.liquid
+++ b/sections/thin-banner-hiring.liquid
@@ -1,6 +1,6 @@
 {% comment %} 
-      Thin Banner Hiring Section
-      Displays a thin banner with a title and a button 
+        Thin Banner Hiring Section
+        Displays a thin banner with a title and a button 
 {% endcomment %}
 
 {{ 'thin-banner-hiring.css' | asset_url | stylesheet_tag }}
@@ -9,19 +9,25 @@
   assign sec = section.settings
 %}
 
-<div class="thin-banner-hiring">
-  {% if sec.title %}
-    <h3 class="title_mobile">{{ sec.title }}</h3>
-  {% endif %}
-  {% if sec.title_desktop %}
-    <h3 class="title_desktop">{{ sec.title_desktop }}</h3>
-  {% endif %}
-</div>
+{% if sec.title and sec.title_desktop %}
+  <!-- Thin Banner Container -->
+  <div class="thin-banner-hiring">
+    <!-- Mobile Title -->
+    {% if sec.title %}
+      <h3 class="title_mobile">{{ sec.title }}</h3>
+    {% endif %}
+    <!-- Desktop Title -->
+    {% if sec.title_desktop %}
+      <h3 class="title_desktop">{{ sec.title_desktop }}</h3>
+    {% endif %}
+  </div>
+{% endif %}
 
 {% schema %}
   {
     "name": "Thin Banner Hiring",
     "tag": "section",
+    "class": "section",
     "settings": [
       {
         "type": "header",
@@ -29,13 +35,15 @@
       }, {
         "type": "text",
         "id": "title",
-        "label": "Title",
-        "default": "Sustainable, Ethically Made Activewear"
+        "label": "Mobile Title",
+        "default": "Sustainable, Ethically Made Activewear",
+        "info": "Title displayed on mobile devices"
       }, {
         "type": "text",
         "id": "title_desktop",
-        "label": "Mobile Title",
-        "default": "Sustainable, Ethically Made Clothes In Sizes XXS To 6XL"
+        "label": "Desktop Title",
+        "default": "Sustainable, Ethically Made Clothes In Sizes XXS To 6XL",
+        "info": "Title displayed on desktop devices"
       }
     ],
     "presets": [
