feat: products grid and option on schema to add products by blocks

--- a/sections/product-grid-hiring.liquid
+++ b/sections/product-grid-hiring.liquid
@@ -4,9 +4,24 @@
   assign sec = section.settings
 -%}
 
-<div class="product-grid-hiring">
-  <div class="product-grid-hiring__container">
-   <h2>Product Grid Hiring</h2>
+<div class="product-grid-hiring__container">
+  <h2>{{ sec.title }}</h2>
+  <div class="product-grid-hiring__grid">
+    {% for block in section.blocks %}
+      <div
+        class="product-grid-hiring__grid-item"
+        style="--pos-x: {{ block.settings.icon-position-x | default: 0 }}; --pos-y: {{ block.settings.icon-position-y | default: 0 }};"
+      >
+        <img
+          src="{{ block.settings.product.featured_image | image_url }}"
+          alt="{{ block.settings.product.featured_image.alt }}"
+          width="100%"
+          height="100%">
+        <div class="product-grid-hiring__grid-plus-icon">
+          {{ 'plus.svg' | inline_asset_content }}
+        </div>
+      </div>
+    {% endfor %}
   </div>
 </div>
 
@@ -15,13 +30,50 @@
     "name": "Product Grid Hiring",
     "tag": "section",
     "settings": [
-      
+      {
+        "type": "text",
+        "id": "title",
+        "label": "Title",
+        "default": "Tisso vison in the wild"
+      }
+    ],
+    "blocks": [
+      {
+        "type": "product",
+        "name": "Product",
+        "settings": [
+          {
+            "type": "product",
+            "id": "product",
+            "label": "Product"
+          },
+          {
+            "type": "range",
+            "id": "icon-position-x",
+            "label": "Icon Position X",
+            "default": 60,
+            "min": 0,
+            "max": 100,
+            "step": 1,
+            "info": "0 = Left, 100 = Right"
+          },
+          {
+            "type": "range",
+            "id": "icon-position-y",
+            "label": "Icon Position Y",
+            "default": 60,
+            "min": 0,
+            "max": 100,
+            "step": 1,
+            "info": "0 = Top, 100 = Bottom"
+          }
+        ]
+      }
     ],
     "presets": [
       {
         "name": "Product Grid Hiring",
-        "settings": {
-        }
+        "settings": {}
       }
     ]
   }
