--- a/assets/product-grid-hiring.css
+++ b/assets/product-grid-hiring.css
@@ -198,7 +198,8 @@
 
     .variant-color-btn {
       --swatch-w: 5.81px;
-      border: 1px solid #000;
+      border: none;
+      box-shadow: 0 0 0 0.5px #000;
       background: #fff;
       color: #000;
       padding: 1.2rem 1.6rem 1.2rem calc(var(--swatch-w) + 16px);
@@ -215,6 +216,16 @@
         background: var(--black);
         color: #fff;
       }
+
+      .variant-color-btn__swatch {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 5.81px;
+        height: 100%;
+        border: none;
+        box-shadow: 0 0 0 0.5px #000;
+      }
     }
 
     .variant-color-btn__label {
@@ -228,7 +239,8 @@
 
     .variant-size-select .variant-size-select-el {
       width: 100%;
-      border: 1px solid #d9d9d9;
+      border: none;
+      box-shadow: 0 0 0 0.5px #000;
       padding: 0.8rem 1rem;
       background: #fff;
       font-size: 1.4rem;
